--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Welcome to My Cool Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Webpage</title>
   <link href="base.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
-  lin
 </head>
-<body>
+<body class="works_on_smart_phone">
   <header>
     <ul>
       <li><a href="index.html">Home</a></li>
