--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -10,7 +10,7 @@
 <body class="works_on_smart_phone">
   <header>
     <ul>
-      <li>class="logo">&#127760;</li>
+      <li class="logo">&#127760;</li>
       <li><a href="index.html">Home</a></li>
       <li><a href="tweets.html">Tweets</a></li>
     </ul>
